<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/menu_group_1">
        <item
            android:id="@+id/g1_item_1"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/menu_position_1"/>
        <item
            android:id="@+id/g1_item_2"
            android:title="@string/menu_position_2"/>
        <item
            android:id="@+id/g1_item_3"
            android:title="@string/menu_position_3">
            <menu>
                <item android:id="@+id/submenu"
                android:title="@string/submenu"/>
            </menu>
        </item>
    </group>
    <group android:id="@+id/menu_group_2">
        <item
            android:id="@+id/g2_item_1"
            android:checkable="true"
            android:checked="false"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/menu_position_4"/>
        <item
            android:id="@+id/g2_item_2"
            android:enabled="false"
            android:title="@string/menu_position_5"/>
        <item
            android:id="@+id/g2_item_3"
            android:title="@string/menu_position_6"/>
    </group>
</menu>